<resources>
    <string name="app_name">Todo List</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="add_now">Add Now</string>
    <string name="enter_todo_title">Enter Todo Work</string>
    <string name="describe_todo_work">Describe about your task…</string>
    <string name="notes_description">Notes Description</string>
    <string name="delete_item">Delete Item</string>
    <string name="edit_item">Edit Item</string>
    <string name="pin_item">Pin Item</string>
    <string name="expend_it">Expend it</string>
    <string name="share_notes_as_text">Share Notes as Text</string>
    <string name="update_now">Update Now</string>
    <string name="sample_time">April 10, 2022 10:06 AM</string>
    <string name="date_format">MMMM dd, yyyy HH:mm a</string>
    <string name="not_available">Not Available</string>
    <string name="feels_lonely_here">Feels Lonely Here</string>
    <string name="you_haven_t_added_any_notes_yet">You haven\'t added any notes yet.</string>
    <string name="tap_the_icon_to_add_notes">Tap the + icon to add notes</string>
    <string name="my_notes">My Notes</string>
</resources>