<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_baseline_not_available"
        android:contentDescription="@string/not_available"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feels_lonely_here"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/you_haven_t_added_any_notes_yet"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tap_the_icon_to_add_notes"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />

</LinearLayout>